--- a/style.css
+++ b/style.css
@@ -1,3 +1,64 @@
-h1 {
-  color: salmon;
+/* Import font Montserrat */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --light-grey: rgb(228, 228, 228);
+  --dark-grey: rgb(99, 99, 99);
+  --black-grey: rgb(73, 73, 73);
+}
+body {
+  margin-top: 32px;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-left {
+  display: flex;
+}
+
+.nav-right {
+  padding: 0; /* Remove the random semicolon */
+  ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+  }
+}
+
+.hero {
+  display: flex;
+  background-color: var(--light-grey);
+  justify-content: flex-start;
+}
+
+.hero img {
+  width: 60%;
+}
+
+.information {
+  display: flex;
+}
+
+.info-image img {
+  width: 60%;
+}
+
+.card {
+  width: 40%;
+}
+
+.course {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
