--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 :root {
   --light-white: rgb(237, 237, 237);
   --light-grey: rgb(228, 228, 228);
-  --dark-grey: rgb(99, 99, 99);
+  --dark-grey: rgb(56, 56, 56);
   --black-grey: rgb(73, 73, 73);
 }
 
@@ -22,45 +22,204 @@ html {
 
 header {
   height: 64px;
-  background-color: orange;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.nav {
-  background-color: red;
+.nav-bar {
   display: flex;
   justify-content: space-between;
   margin: 24px;
   height: 32px;
 
   .nav-left {
-    display: inline-block;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 
     background-color: aqua;
+  }
+  .nav-right ul {
+    background-color: aqua;
+    display: flex;
+    flex-direction: rows;
+    list-style: none;
 
-    .nav-right {
-      background-color: aqua;
+    li {
+      padding-left: 16px;
     }
   }
+
+  @media (max-width) {
+  }
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+p {
+  font-size: 1rem;
+}
+
+h2 {
+  font-size: 2.5rem;
 }
 
 .hero {
   background-color: var(--light-grey);
-  display: grid;
-  grid-template-columns: 60% 40%;
-  /* padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 24px; */
+  display: flex;
 
-  .hero-item-1 img {
-    width: 100%;
+  img {
+    width: 60%;
     padding: 32px 50px 32px 24px;
   }
 
-  .hero-item-2 {
-    width: 100%;
-    padding: 24;
+  .hero-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 5rem;
+    align-items: flex-start;
+    color: rgb(59, 59, 59);
+
+    h1 {
+      margin-bottom: 0;
+    }
+  }
+
+  .button {
+    display: block;
+    width: 75%;
+    text-align: center;
+    background-color: var(--dark-grey);
+    padding: 8px;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.information {
+  display: flex;
+  .info-left {
+    background-color: orange;
+    width: 60%;
+    img {
+      width: 100%;
+    }
+  }
+
+  .info-right {
+    width: 40%;
+
+    .tab {
+      display: flex;
+      align-items: center;
+    }
+
+    .guest {
+      background-color: var(--light-grey);
+    }
+  }
+
+  margin: 32px 24px;
+}
+
+.course {
+  background-color: var(--light-grey);
+  padding: 32px 72px;
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+
+  .course-top,
+  .course-bottom {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+  }
+}
+
+.card {
+  background-color: white;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  .card-text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  img {
+    padding-bottom: 16px;
+  }
+}
+
+.thesis {
+  h2 {
+    text-align: center;
+  }
+
+  .thesis-in {
+    background-color: red;
+    display: flex;
+    margin: 24px;
+
+    .thesis-left {
+      background-color: aqua;
+      width: 60%;
+
+      video {
+        width: 100%;
+      }
+
+      h2 {
+        text-align: left;
+      }
+    }
+
+    .thesis-right {
+      width: 40%;
+
+      .thesis-tab {
+        display: flex;
+        padding: 16px;
+
+        .thesis-text {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
+      }
+
+      img {
+        width: 35%;
+        height: auto;
+      }
+    }
+  }
+}
+
+.fisma {
+  background-color: var(--light-grey);
+}
+
+.footer {
+  border-top: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 16px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 30px;
+
+  .footer-right {
+    display: flex;
+    gap: 1rem;
   }
 }
