--- a/style.css
+++ b/style.css
@@ -88,12 +88,14 @@ h2 {
   background-color: var(--light-grey);
   display: flex;
 
+
   img {
     width: 60%;
     padding: 32px 50px 32px 24px;
   }
 
   .hero-item {
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -123,7 +125,30 @@ h2 {
   @media (max-width: 480px) {
     
     .hero-mobile {
-      display: block;
+      display: flex;
+      padding-left: 32px;
+      margin-bottom: 32px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        display: block;
+        width: 100%;
+        height: 75;
+        margin: 0;
+        padding: 0;
+
+        
+      }
+    }
+
+    .hero-item {
+      display: none;
+    }
+    img {
+      display: none;
     }
     
   }
